PLFM-8641: Reduce number of dependencies